# Genie-Lang

./: .gitignore  CMakeLists.txt  build.sh
.symdump/: Symbol_Table_0  Symbol_Table_1  Symbol_Table_2  Symbol_Table_3  Symbol_Table_4  Symbol_Table_5  Symbol_Table_6  Symbol_Table_7  Symbol_Table_8  Symbol_Table_9
lib/gmp-6.2.1/: ChangeLog  INSTALL.autoconf  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h  config.m4  config.status  configure.ac  gen-bases  gen-fac  gen-fib  gen-jacobitab  gen-psqr  gen-trialdivtab  gmp.h  libgmpxx.la  libtool
lib/gmp-6.2.1/.libs/: libgmpxx.so.4.6.1  libgmpxx.so.4.6.1T
lib/gmp-6.2.1/cxx/: Makefile
lib/gmp-6.2.1/demos/: Makefile
lib/gmp-6.2.1/demos/calc/: Makefile  calc.c
lib/gmp-6.2.1/doc/: Makefile  fdl-1.3.texi  gmp.texi  tasks.html  texinfo.tex
lib/gmp-6.2.1/mpf/: Makefile
lib/gmp-6.2.1/mpn/: Makefile
lib/gmp-6.2.1/mpq/: Makefile
lib/gmp-6.2.1/mpz/: Makefile
lib/gmp-6.2.1/printf/: Makefile
lib/gmp-6.2.1/rand/: Makefile
lib/gmp-6.2.1/scanf/: Makefile
lib/gmp-6.2.1/tests/: Makefile  libtests.la  t-bswap  t-constants  t-count_zeros  t-hightomask  t-modlinv  t-parity  t-popc  t-sub
lib/gmp-6.2.1/tune/: Makefile
src/: main.cpp
src/ast/: Genie-Assignment.cpp  Genie-Assignment.h  Genie-Ast.hpp  Genie-Binary.cpp  Genie-Binary.h  Genie-Block.cpp  Genie-Block.h  Genie-DataDef.cpp  Genie-DataDef.h  Genie-Expr.cpp  Genie-Expr.h  Genie-For.cpp  Genie-For.h  Genie-FunctionCall.cpp  Genie-FunctionCall.h  Genie-FunctionDef.cpp  Genie-FunctionDef.h  Genie-IfElse.cpp  Genie-IfElse.h  Genie-Int.cpp  Genie-Int.h  Genie-Module.cpp  Genie-Module.h  Genie-Program.cpp  Genie-Program.h  Genie-Real.cpp  Genie-Real.h  Genie-RepeatUntil.cpp  Genie-RepeatUntil.h  Genie-Return.cpp  Genie-Return.h  Genie-Switch.cpp  Genie-Switch.h  Genie-TypeDef.cpp  Genie-TypeDef.h  Genie-While.cpp  Genie-While.h
src/bytecode/: Genie-ByteCodeBuffer.cpp  Genie-ByteCodeBuffer.h  Genie-ByteCodeEmitter.cpp  Genie-ByteCodeEmitter.h
src/compiler/: Genie-Compiler.cpp  Genie-Compiler.h  utils.h
src/parser-invoker/: Genie-AstProcessor.cpp  Genie-AstProcessor.h  Genie-AstWalker.h  Genie-ParserInvoker.cpp  Genie-ParserInvoker.h
src/parser-invoker/bison-invoker/: Genie-BisonInvoker.cpp  Genie-BisonInvoker.h
src/pretty-printers/: Genie-JsonAstPrinter.cpp  Genie-JsonAstPrinter.h
src/semantic-analyzer/: Genie-SemanticAnalyzer.cpp  Genie-SemanticAnalyzer.h
src/symbol-table/: Genie-Scope.cpp  Genie-Scope.h  Genie-SymbolTable.cpp  Genie-SymbolTable.h  Scope.h  SymbolTable.cpp  SymbolTable.h
tests/genie/: 01-expressions.geni  02-blocks.geni  02-blocks.geni.bc  03-nested-blocks.geni  04-functions.geni  05-enums.geni  06-01--05.geni  07-for-loops.geni  08-while-loops.geni  08-while-loops.geni.bc  09-repuntil-loops.geni  09-repuntil-loops.geni.bc  10-functions-1.geni  10-functions-1.geni.bc
(+199 files in other folders)
